--- a/free-nodes/page-5.htm
+++ b/free-nodes/page-5.htm
@@ -120,6 +120,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2025-05-10">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-5-10-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/819f1aade82ef2f65ccdf55abb283a16.webp" alt="5月10日→19.4M/S|2025年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-5-10-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">5月10日→19.4M/S|2025年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了日本、加拿大、欧洲、香港、美国、韩国、新加坡等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2025-05-09">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2025-5-9-node-share-links.htm" class="xcblog-blog-url">
@@ -228,16 +242,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-6-8-clash-node.htm" title="6月8日→18.6M/S|2025年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">6月8日→18.6M/S|2025年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-11-clash-node-daily-updates.htm" title="6月11日→22.4M/S|2025年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐">6月11日→22.4M/S|2025年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-14-clash-node.htm" title="5月14日→22.2M/S|2025年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐">5月14日→22.2M/S|2025年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-9-free-node-subscribe-links.htm" title="6月9日→22.4M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">6月9日→22.4M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-25-free-ssr-node.htm" title="5月25日→21.5M/S|2025年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐">5月25日→21.5M/S|2025年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-31-shadowrocket-node.htm" title="5月31日→18.1M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">5月31日→18.1M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-6-free-v2ray-subscribe.htm" title="6月6日→18.4M/S|2025年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐">6月6日→18.4M/S|2025年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-111033.htm" title="Numpy 高效的运算工具">Numpy 高效的运算工具</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-3-free-shadowrocket-node.htm" title="6月3日→18.1M/S|2025年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址，便宜机场推荐">6月3日→18.1M/S|2025年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-21-free-v2ray-subscribe.htm" title="5月21日→19.3M/S|2025年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址，便宜机场推荐">5月21日→19.3M/S|2025年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-22-free-node-subscribe.htm" title="5月22日→20.4M/S|2025年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐">5月22日→20.4M/S|2025年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-5-free-subscribe-node.htm" title="6月5日→22.2M/S|2025年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址，便宜机场推荐">6月5日→22.2M/S|2025年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-24-free-shadowrocket-node.htm" title="5月24日→21.5M/S|2025年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐">5月24日→21.5M/S|2025年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-8-clash-node.htm" title="6月8日→18.6M/S|2025年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">6月8日→18.6M/S|2025年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-11-clash-node.htm" title="5月11日→18.5M/S|2025年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐">5月11日→18.5M/S|2025年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-20-free-v2ray.htm" title="6月20日→21.3M/S|2025年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐">6月20日→21.3M/S|2025年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-111033.htm" title="Numpy 高效的运算工具">Numpy 高效的运算工具</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-8-free-clash-subscribe.htm" title="5月8日→19.9M/S|2025年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址，便宜机场推荐">5月8日→19.9M/S|2025年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -249,7 +263,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
